@@ -54,13 +54,12 @@ sub handler
 	# don't attempt to rewrite the URI of an internal request
 	return DECLINED unless $r->is_initial_req();
 
-	my $repository_id = $r->dir_config( "EPrints_ArchiveID" );
-	if( !defined $repository_id )
+	my $repository = $EPrints::HANDLE->current_repository;
+	if( !defined $repository )
 	{
 		return DECLINED;
 	}
-	my $repository = EPrints::Repository->new( $repository_id, db_connect => 0 );
-	$repository->check_secure_dirs( $r );
+#	$repository->check_secure_dirs( $r );
 	my $esec = $r->dir_config( "EPrints_Secure" );
 	my $secure = (defined $esec && $esec eq "yes" );
 	my $urlpath;
