@@ -8406,3 +8406,7 @@ EPRINTS-3.1-beta-2
 
 2009-10-27 cjg
  * Fixed bug which meant "use Session" caused a die.
+
+2009-11-5 tdb
+ * Repository objects persist across requests
+
